# xicor

./: README.md  pyproject.toml  setup.py
src/: xicor.py
src/xicor/: interfaces.py  xicor.py
tests/: test_xicor.py
